@@ -40,6 +40,24 @@ use Net::Async::Redis::Cluster;
 
 use List::Util qw(pairmap);
 
+my $redis_class;
+my $cluster_class;
+BEGIN {
+    $redis_class = 'Net::Async::Redis';
+    $cluster_class = 'Net::Async::Redis::Cluster';
+    # Only enable XS mode on request
+    if($ENV{PERL_REDIS_XS}) {
+        eval {
+            require Net::Async::Redis::XS;
+            require Net::Async::Redis::Cluster::XS;
+            1;
+        } and do {
+            $redis_class = 'Net::Async::Redis::XS';
+            $cluster_class = 'Net::Async::Redis::Cluster::XS';
+        }
+    }
+}
+
 use Myriad::Exception::Builder category => 'transport_redis';
 
 declare_exception 'NoSuchStream' => (
@@ -562,7 +580,7 @@ instance, depending on the setting of C<$use_cluster>.
 async method redis () {
     my $instance;
     if($use_cluster) {
-        $instance = Net::Async::Redis::Cluster->new(
+        $instance = $cluster_class->new(
             client_side_cache_size => $clientside_cache_size,
         );
         $self->add_child(
@@ -573,7 +591,7 @@ async method redis () {
             port => $redis_uri->port,
         );
     } else {
-        $instance = Net::Async::Redis->new(
+        $instance = $redis_class->new(
             host => $redis_uri->host,
             port => $redis_uri->port,
             client_side_cache_size => $clientside_cache_size,
